themes/main/src/sass/static_special.scss
@import '_helpers/query';
@import '_helpers/mixins';
@import '_helpers/constants';
@import '_helpers/colors';

@include get-font(SPECIAL);

main.special {
  @include site-top-spacing($HEADER-HEIGHT-CONTRACTED);
  padding-top: 0;

  section {
    width: 100%;
  }

  article time, article address {
    display: none;
  }

  section#cover {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    height: 370px;
    width: 100%;
    position: fixed;
    z-index: -1;

    @include media-query(FOUR) {
      height: 450px;
    }
  }

  section.title {
    display: table;
    height: 370px;
    padding: 30px;

    @include media-query(FOUR) {
      height: 450px;
      padding: 122px;
    }

    div.description {
      display: table-cell;
      vertical-align: middle;
    }

    h1 {
      padding-bottom: 10px;
    }
  }

  .blocks {
    background-color: $special-background;
  }

  section.image.verticalSpacing + section.image.verticalSpacing  {
    padding-top: 0;
  }

  .verticalSpacing {
    padding-top: 50px;
  }

  section.text {
    padding-left: 25px;
    padding-right: 25px;
    margin: 0 auto;

    @include media-query(THREE) {
      padding-left: 0;
      padding-right: 0;
      max-width: (3*$COLUMN-WIDTH);
    }



    p {
      padding-top: 20px;
      @include media-query(FOUR){
        padding-top: 30px;
      }
    }
  }

  section.image {
    position: relative;
    z-index: 3;
    img {
      width: 100%;
    }
  }

  section.video {

    .moduleTitle {
      padding-bottom: 25px;
    }

    .container {
      max-width: (3*$COLUMN-WIDTH);
      margin: 0 auto;
    }

    .video-wrapper-16x9 {
      padding-bottom: 56.25%;
    }

    .video-wrapper {
      position: relative;
      margin: 1rem auto;
      height: 0;
      overflow: hidden;

      iframe {
        position: absolute;
        top:0;
        left: 0;
        width: 100%;
        height: 100%;
      }
    }
  }

  section.quote {
    @include special-blockquotes;
    display: -webkit-flex; //Old Safari
    display: flex;
    -webkit-flex-direction: column; //Old Safari
    flex-direction: column;

    background-color: $box-background;
    padding: 50px 25px;
    margin-top: 50px;

    @include media-query(THREE) {
      padding: 80px 10% 0;
    }

    .quote-info {
      width: 100%;
      margin-bottom: 10px;

      h3 {
        display: inline;
      }
    }
  }

  section.links {
    padding-left: 25px;
    padding-right: 25px;
    margin: 0 auto;
    position: relative;
    background-color: $special-background;
    z-index: 3;

    .links-container {
      display: -webkit-flex; //Old Safari
      display: flex;
      -webkit-flex-direction: row; //Old Safari
      flex-direction: row;
      -webkit-justify-content: center; //Old Safari
      justify-content: center;
      -webkit-flex-wrap: wrap; //Old Safari
      flex-wrap: wrap;
      padding: 25px 0 0;
    }

    .link {
      padding: 0 5px 25px;

      @include media-query(TWO) {
        width: 50%;
      }
      @include media-query(THREE) {
        width: 33%;
      }

      @include image-rounded-responsive(200px);
    }

    .link-figure-title {
      padding: 10px 0 0;
    }
  }

  .share-special-top {
    position: fixed;
    bottom: 0;
    padding: 5px 0;
    @include media-query(FOUR) {
      top: -100px;
      bottom: auto;
    }
  }

  .share-special-middle {
    position: fixed;
    bottom: 0;
    padding: 5px 0;
    @include media-query(FOUR) {
      top: 130px;
      bottom: auto;
    }
  }

  .share-special-bottom {
    position: relative;
    padding: 25px 0 0;
    @include media-query(FOUR) {
      position: fixed;
      padding: 5px 0;
    }
  }

  #share-special {
    display: -webkit-flex; //Old Safari
    display: flex;
    -webkit-flex-direction: row; //Old Safari
    flex-direction: row;
    -webkit-flex-wrap: nowrap; //Old Safari
    flex-wrap: nowrap;
    justify-content: center;
    -webkit-justify-content: center; //Old Safari

    width: 100%;
    background-color: $special-background;

    z-index: 4;

    -webkit-transition: top 1s; //Old Safari
    transition: top 1s;

    .share-icon {
      width: 50px;
      margin: 0 5px;
    }

    @include media-query(FOUR) {
      -webkit-flex-direction: column; //Old Safari
      flex-direction: column;
      -webkit-flex-wrap: wrap; //Old Safari
      flex-wrap: wrap;

      width: 45px;
      z-index: 2;
      background-color: rgba(0,0,0,0);
      margin-left: 2%;

      .share-icon {
        width: 100%;
        margin: 8% 0;
      }

      .share-mobile {
        display: none;
      }
    }

    @include media-query(FOUR) {
      width: 55px;
      margin-left: 32px;
    }
  }
}

